# ragbits-example

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
infrastructure/: README.md  config.sh  deploy_infra.sh  destroy_infra.sh  get_gcp_key.sh
infrastructure/terraform/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
src/ragbits_example/: __init__.py  main.py
