[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragbits-example"
version = "0.1.0"
description = "Companion repository for the Ragbits Builder Journal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ragbits"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ragbits_example"]
